# formal-verification-experiments

./: .gitignore  .gitmodules  HANDOFF.md
scripts/: build-microkit.sh  build-verified.sh  build-verus.sh  check-pins.sh  download-microkit-sdk.sh  install-deps.sh  qemu-e2e-container.sh
sel4-microkernel/: README.md  qemu-e2e.Containerfile  rust-toolchain.toml
sel4-microkernel/microkit-hello/: Cargo.toml  Makefile  Makefile.unified  README.md  hello.system  run-qemu.sh  setup.sh
sel4-microkernel/microkit-hello/.cargo/: config.toml
sel4-microkernel/microkit-hello/src/: lib.rs  main.rs
sel4-microkernel/rpi4-graphics/: Cargo.toml  Makefile  Makefile.unified  README.md  checksums.sha256  graphics.system  graphics.system.props.toml  tpm-boot.system  tpm-boot.system.props.toml  tpmtest.system  tpmtest.system.bak  tpmtest_test.system  tpmtest_test.system.props.toml  tvdemo-input.system  tvdemo-input.system.props.toml  tvdemo-network.system  tvdemo-network.system.props.toml  tvdemo.system  tvdemo.system.props.toml
sel4-microkernel/rpi4-graphics/.cargo/: config.toml
sel4-microkernel/rpi4-graphics/docs/: BOOT_DEBUGGING.md  PSCI_FIX.md  TPM9670.md
sel4-microkernel/rpi4-graphics/scripts/: create-debug-sdcard.sh  create-direct-boot-sdcard.sh  create-sdcard-full.sh  create-sdcard.sh  create-sel4test-sdcard.sh  inject-uboot.sh
sel4-microkernel/rpi4-graphics/src/: crypto.rs  direct_hdmi_backend.rs  font.rs  framebuffer.rs  graphics.rs  graphics_input_pd.rs  hdmi_backend.rs  lib.rs  mailbox.rs  main.rs  terminal.rs  tpm.rs  tpmtest_main.rs  truetype.rs  tvdemo_main.rs
sel4-microkernel/rpi4-input/: Cargo.toml
sel4-microkernel/rpi4-input-pd/: Cargo.toml
sel4-microkernel/rpi4-input-pd/src/: main.rs
sel4-microkernel/rpi4-input/src/: ir_remote.rs  keyboard.rs  lib.rs  touch.rs  uart.rs
sel4-microkernel/rpi4-input/src/usb/: dwc2.rs  hid.rs  mod.rs
sel4-microkernel/rpi4-llm/: Cargo.toml  README.md  llmdemo.system  llmdemo.system.props.toml
sel4-microkernel/rpi4-llm-loader/: Cargo.toml  README.md
sel4-microkernel/rpi4-llm-loader/fuzz/: Cargo.toml
sel4-microkernel/rpi4-llm-loader/fuzz/fuzz_targets/: parse.rs
sel4-microkernel/rpi4-llm-loader/src/: bounds.rs  gguf.rs  lib.rs
sel4-microkernel/rpi4-llm-loader/tests/: fixture.rs  malformed.rs
sel4-microkernel/rpi4-llm-loader/tests/common/: mod.rs
sel4-microkernel/rpi4-llm/demo/: Cargo.toml
sel4-microkernel/rpi4-llm/demo/src/: main.rs
sel4-microkernel/rpi4-llm/fixtures/: generate_fixture.py  reference_infer.py  tinystories-260k-f32.gguf
sel4-microkernel/rpi4-llm/src/: engine.rs  lib.rs  math.rs  receipt.rs  run.rs  tokenizer.rs
sel4-microkernel/rpi4-llm/tests/: generate.rs
sel4-microkernel/rpi4-network/: Cargo.toml  README.md  ipdemo.system  ipdemo.system.props.toml  netdemo.system  netdemo.system.props.toml
sel4-microkernel/rpi4-network-protocol/: Cargo.toml  NETWORK_RING_PROOF.md
sel4-microkernel/rpi4-network-protocol/src/: arp.rs  generation.rs  generation_contract.rs  lib.rs  proof.rs  ring_contract.rs  wave1.rs
sel4-microkernel/rpi4-network/src/: main.rs  netif.rs  protocol.rs  time.rs
sel4-microkernel/rpi4-network/src/drivers/: ethernet.rs  mod.rs  virtio_net.rs  wifi.rs
sel4-microkernel/rpi4-network/src/stack/: device.rs  mod.rs
sel4-microkernel/rpi4-photo-protocol/: Cargo.toml
sel4-microkernel/rpi4-photo-protocol/src/: lib.rs
sel4-microkernel/rpi4-photoframe/: Cargo.toml  README.md  photoframe.system  photoframe.system.props.toml
sel4-microkernel/rpi4-photoframe-tests/: Cargo.toml
sel4-microkernel/rpi4-photoframe-tests/src/: lib.rs
sel4-microkernel/rpi4-photoframe-tests/tests/: pipeline.rs
sel4-microkernel/rpi4-photoframe/photos/: sample_gradient.qoi
sel4-microkernel/rpi4-photoframe/src/: bounded_alloc.rs  decoder.rs  main.rs  secure_decode.rs  validate.rs
sel4-microkernel/rpi4-supervisor/: Cargo.toml  build.rs  supdemo.system  supdemo.system.props.toml
sel4-microkernel/rpi4-supervisor/src/: installer.rs  lib.rs  lifecycle.rs  protocol.rs  verifier.rs
sel4-microkernel/rpi4-tpm-boot/: Cargo.toml  README.md  TRANSPORT.md
sel4-microkernel/rpi4-tpm-boot/src/: attestation.rs  boot_chain.rs  command.rs  commands.rs  crb.rs  lib.rs  pcr.rs  slb9670.rs  spi.rs  transport.rs  wave1.rs
sel4-microkernel/rpi4-tpm-pd/: Cargo.toml
sel4-microkernel/rpi4-tpm-pd/src/: main.rs
sel4-microkernel/rpi4-tvdemo/: Cargo.toml
sel4-microkernel/rpi4-tvdemo/src/: animation.rs  backend.rs  lib.rs  menu.rs  tv_app.rs
sel4-microkernel/sel4-x86_64/: Cargo.toml  README.md
sel4-microkernel/sel4-x86_64/scripts/: build.sh  run.sh  setup.sh
sel4-microkernel/sel4-x86_64/src/: main.rs
sel4-microkernel/tools/system-check/: Cargo.toml  README.md
sel4-microkernel/tools/system-check/src/: checker.rs  lib.rs  main.rs
sel4-microkernel/tools/system-check/tests/: checker.rs  policy_failures.rs
sel4-microkernel/update-capsule/: Cargo.toml  README.md
sel4-microkernel/update-capsule/cli/: Cargo.toml
sel4-microkernel/update-capsule/cli/src/: main.rs
sel4-microkernel/update-capsule/fuzz/: Cargo.toml
sel4-microkernel/update-capsule/fuzz/fuzz_targets/: parse.rs  verify.rs
sel4-microkernel/update-capsule/src/: crypto.rs  header.rs  lib.rs  mint.rs  verify.rs
sel4-microkernel/update-capsule/test-vectors/: pd-code-v2.hex
sel4-microkernel/update-capsule/tests/: corruption.rs  golden.rs  malformed.rs  pipeline.rs
sel4-microkernel/update-capsule/tests/common/: mod.rs
sel4-microkernel/update-capsule/tests/vectors/: golden.capsule
sel4-microkernel/verified/: Cargo.toml  verify.sh
sel4-microkernel/verified/src/: lib.rs
tools/serial-debug/: Cargo.toml  README.md
tools/serial-debug/src/: main.rs
tools/serial-debug/src/boot/: config.rs  mod.rs  partition.rs  validate.rs
tools/serial-debug/src/devices/: esp32.rs  generic.rs  mod.rs  profile.rs  rpi4.rs  stm32.rs
tools/serial-debug/src/image/: kernel.rs  mod.rs
tools/serial-debug/src/serial/: mod.rs  monitor.rs  port.rs
verus/: .gitignore  Cargo.toml  Containerfile  README.md  (+1 more)
verus/verified/: Cargo.toml
verus/verified/src/: lib.rs
(+118 files in other folders)
