[package]
name = "rpi4-graphics"
version = "0.1.0"
edition = "2021"
authors = ["Prasanna Gautam"]
description = "seL4 Microkit graphics demo for Raspberry Pi 4"
license = "MIT"

[lib]
name = "rpi4_graphics"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "graphics_pd"
path = "src/main.rs"

[dependencies]
# sel4-microkit provides the Microkit runtime and API
# Using git version (same as microkit-hello) for SDK 2.1.0 compatibility
sel4-microkit = { git = "https://github.com/seL4/rust-sel4" }

# Verus verification support (specs stripped in normal builds)
verus_builtin_macros = "0.0.0-2025-12-07-0054"
verus_builtin = "0.0.0-2025-12-07-0054"

# RustCrypto SHA-256 (no_std compatible, well-audited)
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"

[profile.dev]
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
