[package]
name = "rpi4-input-pd"
version = "0.1.0"
edition = "2021"
authors = ["Prasanna Gautam"]
description = "seL4 Microkit Input Protection Domain for Raspberry Pi 4"
license = "MIT"

[[bin]]
name = "input_pd"
path = "src/main.rs"

[dependencies]
# sel4-microkit provides the Microkit runtime and API
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", rev = "3059c2d236bf56b066936dd48d8966255e172c3b" }

# Input drivers
rpi4-input = { path = "../rpi4-input" }

# IPC protocol
rpi4-input-protocol = { path = "../rpi4-input-protocol" }

[features]
# Input sources compiled into the PD. The Kconfig-driven build passes an
# explicit set (--no-default-features --features ...) derived from
# CONFIG_INPUT_* options; plain `cargo build` keeps the UART-only behavior.
default = ["uart"]
# Mini-UART serial console input (CONFIG_INPUT_UART)
uart = []
# USB HID keyboard via the DWC2 host controller (CONFIG_INPUT_USB_KEYBOARD).
# Requires the usb_regs/usb_dma mappings in the .system description.
usb = ["rpi4-input/usb"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"

[profile.dev]
panic = "abort"
