[package]
name = "rpi4-input"
version = "0.1.0"
edition = "2021"
authors = ["Formal Verification Experiments"]
description = "Input device drivers for Raspberry Pi 4 (keyboard, IR remote, touch)"
license = "MIT OR Apache-2.0"

[lib]
name = "rpi4_input"
path = "src/lib.rs"

[dependencies]

[features]
default = []
# Enable Verus verification attributes
verus = []
# USB HID keyboard input via the DWC2 host controller (BCM2711).
# Off by default: enable via the Kconfig option CONFIG_INPUT_USB_KEYBOARD
# (see build-system/Kconfig) or directly with --features usb.
usb = []
