[package]
name = "rpi4-llm-loader"
version = "0.1.0"
edition = "2021"
description = "Bounded no_std GGUF loader with Verus range proofs"
license = "MIT"

[dependencies]
verus_builtin_macros = "=0.0.0-2025-12-07-0054"
verus_builtin = "=0.0.0-2025-12-07-0054"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
