[package]
name = "rpi4-llm"
version = "0.1.0"
edition = "2021"
description = "Arena-based no_std llama inference engine (WP-6): single-threaded, deterministic, sized from the verified descriptor"

[workspace]
members = ["demo"]

[[bin]]
name = "llmdemo_pd"
path = "src/bin/llmdemo_pd.rs"
required-features = ["pd"]

[[bin]]
name = "llm-receipt-verify"
path = "src/bin/llm-receipt-verify.rs"
required-features = ["std"]

[dependencies]
rpi4-llm-loader = { path = "../rpi4-llm-loader" }
# Pure-Rust math (no_std has no expf/sqrtf). Pinned exactly: these
# functions are part of the determinism envelope the demo hash asserts.
libm = "=0.2.15"
sha2 = { version = "=0.10.8", default-features = false }
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["digest"] }
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", rev = "3059c2d236bf56b066936dd48d8966255e172c3b", optional = true }

[features]
default = []
pd = ["dep:sel4-microkit"]
std = []
