[package]
name = "rpi4-network-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Prasanna Gautam"]
description = "Shared network IPC protocol between the Network PD and client PDs"
license = "MIT"

[dependencies]
verus_builtin_macros = "=0.0.0-2025-12-07-0054"
verus_builtin = "=0.0.0-2025-12-07-0054"

[features]
default = []
verus = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
