[package]
name = "rpi4-network"
version = "0.1.0"
edition = "2021"
authors = ["Prasanna Gautam"]
description = "Network Protection Domain for seL4 Microkit on Raspberry Pi 4"
license = "MIT"

[[bin]]
name = "network_pd"
path = "src/main.rs"

[features]
default = []

# Driver selection (compile-time)
net-ethernet = []
net-wifi = []

# IP stack selection
net-stack-lwip = []
net-stack-picotcp = []

[dependencies]
# sel4-microkit provides the Microkit runtime and API
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", rev = "3059c2d236bf56b066936dd48d8966255e172c3b" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"

[profile.dev]
panic = "abort"
