[package]
name = "rpi4-supervisor"
version = "0.1.0"
edition = "2021"
description = "Hierarchical Microkit supervisor and restart demonstration"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "supervisor_pd"
path = "src/bin/supervisor_pd.rs"

[[bin]]
name = "worker_pd"
path = "src/bin/worker_pd.rs"

[dependencies]
# This revision adds the explicit `stack_size` protection-domain contract and
# `__sel4_runtime_common__stack_init` entry required for repeatable child
# restart. Microkit SDK and Rust nightly remain pinned by the repository.
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", rev = "413940c8058da32098c464f6cd09e550b230505c" }
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "413940c8058da32098c464f6cd09e550b230505c" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"

[profile.dev]
panic = "abort"
