[package]
name = "update-capsule"
version = "0.1.0"
edition = "2021"
description = "Verified no_std parser and verifier for Secure Agent OS update capsules"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "update-capsule-cli"
path = "src/bin/update-capsule-cli.rs"
required-features = ["cli"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }
verus_builtin_macros = "=0.0.0-2025-12-07-0054"
verus_builtin = "=0.0.0-2025-12-07-0054"
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc", "digest"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
hex = { version = "0.4", optional = true }

[features]
default = ["alloc-crypto"]
alloc-crypto = ["dep:ed25519-dalek"]
cli = ["alloc-crypto", "dep:rand_core", "dep:hex", "ed25519-dalek/rand_core"]

[dev-dependencies]
hex = "0.4"
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc", "digest", "rand_core"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
