[package]
name = "system-check"
version = "0.1.0"
edition = "2021"
description = "Authority-graph checker for seL4 Microkit .system files"
license = "MIT"

[dependencies]
roxmltree = "=0.20.0"
serde = { version = "=1.0.219", features = ["derive"] }
toml = "=0.8.23"
walkdir = "=2.5.0"

[dev-dependencies]
pretty_assertions = "=1.4.1"
