[package]
name = "update-capsule-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
update-capsule = { path = ".." }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "verify"
path = "fuzz_targets/verify.rs"
test = false
doc = false
bench = false

[workspace]
